# reconciliation-workshop

./: .gitignore  ALEml  ALEml_undated  ALEobserve  alerax  aleraxApr  aleraxNov
AleRax/ext/GeneRaxCore/ext/MPIScheduler/: CMakeLists.txt
AleRax/ext/GeneRaxCore/ext/MPIScheduler/src/: CMakeLists.txt  Checkpoint.cpp  Checkpoint.hpp  Command.cpp  Command.hpp  CommandsRunner.cpp  CommandsRunner.hpp  Instance.cpp  Instance.hpp  RunStatistics.hpp  SVGDrawer.cpp  SVGDrawer.hpp  main.cpp
AleRax/ext/GeneRaxCore/ext/MPIScheduler/src/fork_implem/: ForkImplem.hpp
AleRax/ext/GeneRaxCore/ext/MPIScheduler/src/split_implem/: SplitImplem.hpp
AleRax/ext/GeneRaxCore/ext/MPIScheduler/tests/fake_program/: CMakeLists.txt
AleRax/ext/GeneRaxCore/ext/coraxlib/examples/cmake-project/: CMakeLists.txt
AleRax/ext/GeneRaxCore/ext/coraxlib/src/corax/: CMakeLists.txt  corax.h  corax_io.h  corax_tree.h  corax_util.h
AleRax/ext/GeneRaxCore/ext/coraxlib/src/corax/core/: common.h  parsimony.h  repeats.h
AleRax/ext/GeneRaxCore/ext/coraxlib/src/corax/io/: CMakeLists.txt  binary.c  binary.h  binary_io_operations.c  binary_io_operations.h  fasta.h  maps.c  maps.h  newick.cpp  newick.hpp  output.c  output.h  phylip.h  utree_io.h  utree_newick.c  utree_svg.c
AleRax/ext/GeneRaxCore/ext/coraxlib/src/corax/kernel/: clv.c  clv.h  derivatives.c  derivatives.h  kernel_generic.h  kernel_sse.h  pmatrix.c  pmatrix.h
AleRax/ext/GeneRaxCore/ext/coraxlib/src/corax/kernel/avx/: core_clv_avx.h  core_derivatives_avx.c  core_likelihood_avx.h  (+3 more)
AleRax/ext/GeneRaxCore/ext/coraxlib/src/corax/model/: CMakeLists.txt  aa_rates.c  eigen.h  evolmodel.cpp  gamma.c  gamma.h  invariant.h  modutil.h
AleRax/ext/GeneRaxCore/ext/coraxlib/src/corax/optimize/: bfgs.c  brent.c  callback.c  callback.h  em.c  newton.c  nni_round.c  opt_branches.c  opt_branches.h  opt_generic.c  opt_model.c  opt_treeinfo.h  spr_round.c
AleRax/ext/GeneRaxCore/ext/coraxlib/src/corax/topology/: CMakeLists.txt  topological_tests.h
AleRax/ext/GeneRaxCore/ext/coraxlib/src/corax/tree/: CMakeLists.txt  hashtable.c  hashtable.h  treeinfo.c  utree.h  utree_moves.c  utree_moves.h  utree_ops.h  utree_parsimony.c  utree_random.c  utree_random.h  utree_split.c  utree_split.h  utree_tbe.c  utree_tbe.h  utree_traverse.c
AleRax/ext/GeneRaxCore/ext/coraxlib/src/corax/util/: absdiff.h  compress.c  hardware.h  list.c  msa.h  nni_parsimony.h  random.c  random.h  stepwise.c  stepwise.h
AleRax/ext/GeneRaxCore/ext/coraxlib/test/: CMakeLists.txt
AleRax/ext/GeneRaxCore/ext/coraxlib/test/cmake/: CoraxlibTestHelper.cmake
AleRax/ext/GeneRaxCore/ext/coraxlib/test/integration/: test_cmake.sh
AleRax/ext/GeneRaxCore/ext/coraxlib/test/regression/src/: 00010_NMDU_lkcalc.c  00011_NMAU_lkcalc.c  00012_NMOU_lkcalc.c  00020_NMDR_lkcalc.c  00021_NMAR_lkcalc.c  00022_NMOR_lkcalc.c  00030_NMDU_gamma.c  00032_NMOU_gamma.c  00110_NPDN_fasta.c  blopt-5states.c  blopt-minimal.c  common.h  compress-patterns.c  derivatives-oddstates.c  hky.c  newick-tree.c  qmaker-models.c  scaling.c  split-reconstruct.c  tree-random.c  tree-serialize.c  treemove-spr.c  treemove-tbr.c
AleRax/ext/GeneRaxCore/ext/coraxlib/test/unit/: CMakeLists.txt
AleRax/ext/GeneRaxCore/ext/coraxlib/test/unit/data/: random_test_trees
AleRax/ext/GeneRaxCore/ext/coraxlib/test/unit/src/: corax_assert.cpp  environment.hpp  main.cpp  msa.cpp  nni.cpp  partition.cpp
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/: .clang-format  CMakeLists.txt
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/bench/: compare.sh
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/bench/data/trees/: 128.newick  94.newick
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/bench/gbench_tools/gbench/: report.py
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/ci/: dockerfile-gcc-11-bench  dockerfile-gcc-7
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/cmake/: simd.cmake  targetSourcesLocal.cmake  warningFlags.cmake
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/docs/: CMakeLists.txt  spr_tutorial.md
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/examples/heterotachy/: README.md
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/examples/lg4/: lg4.c
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/examples/load-utree/: load-utree.c
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/examples/newick-fasta-unrooted/: newick-fasta-unrooted.c
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/src/corax/: corax_core.h  corax_kernel.h  corax_topology.h
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/src/corax/core/: CMakeLists.txt  partition.h  repeats.c
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/src/corax/io/: phylip.c
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/src/corax/kernel/: kernel_avx.h  kernel_avx2.h  likelihood.c  likelihood.h
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/src/corax/model/: evolmodel.hpp  modutil.c  modutil_mult.c
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/src/corax/optimize/: CMakeLists.txt  opt_generic.h  opt_model.h
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/src/corax/topology/: kh_test.c
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/src/corax/tree/: treeinfo.h  utree.c  utree_compare.c  utree_compare.h  utree_parsimony.h
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/src/corax/util/: CMakeLists.txt  absdiff.c  compress.h  hardware.c  list.h  msa.c
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/test/integration/: CMakeLists.txt
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/test/regression/: runtest.py
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/test/regression/src/: alpha-cats.c  asc-bias.c  binary-sequential.c  common.c  partial-traversal.c  protein-models.c  split-tbe.c  treemove-nni.c
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/test/unit/data/: small.fasta
AleRaxNovember/ext/GeneRaxCore/ext/coraxlib/test/unit/src/: nonrev.cpp
AleRaxRep/ext/GeneRaxCore/ext/coraxlib/bench/: CMakeLists.txt
AleRaxRep/ext/GeneRaxCore/ext/coraxlib/bench/data/msas/: 140.phy
AleRaxRep/ext/GeneRaxCore/ext/coraxlib/bench/src/: LibpllException.hpp  LibpllParsers.hpp  Model.hpp  PLLTreeInfo.cpp
AleRaxRep/ext/GeneRaxCore/ext/coraxlib/src/corax/kernel/: CMakeLists.txt
(+3474 files in other folders)
